# core

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cbindgen.toml
.cargo/: config.toml
.github/workflows/: rust.yml
examples/clang/: .ccls  .gitignore  Makefile  README.md  main.c  play.sh
src/: action.rs  api.rs  card.rs  error.rs  game.rs  lib.rs  main.rs  pile.rs  rng.rs  score.rs  sets.rs  state.rs
tests/: features_test.rs  rules_test.rs
tests/common/: mod.rs
