[package]
name = "playsuipi_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "playsuipi_game"
path = "src/main.rs"

[dependencies]
getrandom = { version = "0.3.0", features = ["wasm_js"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
wasm-bindgen = "0.2"
