[package]
name = "playsuipi_core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "playsuipi_game"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
